<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The title of the NFC tag application -->
    <string name="app_name">Tags</string>

    <!-- The title for the activity that shows a tag that was just scanned -->
    <string name="title_scanned_tag">New tag collected</string>

    <!-- The title for the activity that shows a tag that was stored from a past scan -->
    <string name="title_existing_tag">Tag</string>

    <!-- The title of the tab that displays all recently scanned NFC tags -->
    <string name="tab_tags">Tags</string>

    <!-- The title of the tab that displays all starred NFC tags -->
    <string name="tab_starred">Starred</string>

    <!-- The title of the tab that displays the editor for the device's local tag -->
    <string name="tab_my_tag">My tag</string>

    <!-- The title displayed for unknown tag types -->
    <string name="tag_unknown">Unknown tag type</string>

    <!-- The title displayed for an empty tag -->
    <string name="tag_empty">Empty tag</string>

    <!-- Button label indicating that the user wants to delete a tag -->
    <string name="button_delete">Delete</string>

    <!-- Button label indicating that the user wants to delete a tag -->
    <string name="button_done">Done</string>

    <!-- Button label indicating that the user wants to save a tag -->
    <string name="button_save">Save</string>

    <!-- Button label indicating that the user wants to cancel editing a tag -->
    <string name="button_cancel">Cancel</string>

    <!-- String describing that if the user doesn't want to save a tag they should touch the button labeled Cancel. The text for the cancel button comes from the system string button_done. -->
    <string name="cancel_help_text">To skip adding this tag to your collection, touch Done</string>

    <!-- String displayed for an action to send a text message to a phone number -->
    <string name="action_text">Text <xliff:g id="phone_number">%s</xliff:g></string>

    <!-- String displayed for an action to call a phone number -->
    <string name="action_call">Call <xliff:g id="phone_number">%s</xliff:g></string>

    <!-- Label for control which enables/disables the "my tag" feature. -->
    <string name="turn_on_my_tag">Share my tag</string>

    <!-- Label for activity which edits a tag to share/write [CHAR LIMIT=60] -->
    <string name="edit_tag">Edit tag</string>

    <!-- Description for the control which enables/disables the "my tag" feature. -->
    <string name="turn_on_my_tag_subtitle">Allow others to read my tag </string>

    <!-- Label for control which adds content to the "my tag" feature. -->
    <string name="add_content">More&#8230;</string>

    <!-- Heading for the title of the content in the "my tag" feature. -->
    <string name="tag_title">Title</string>

    <!-- Heading for the text of the content in the "my tag" feature. -->
    <string name="tag_text">Text</string>

    <!-- Heading for dialog presented for selecting content to write to tag -->
    <string name="select_type">Select type to add</string>

    <!-- Title for image type for writing content to a tag -->
    <string name="photo">Photo</string>

    <!-- Error message when a selected photo could not be loaded -->
    <string name="bad_photo">Could not open image.</string>

    <!-- Title for URL type for writing content to a tag -->
    <string name="url">URL</string>

    <!-- Title for contact type for writing content to a tag -->
    <string name="contact">Contact</string>

    <!-- Title for address type for writing content to a tag -->
    <string name="location">Location</string>

    <!-- Message for prompting on an empty tag -->
    <string name="empty_tag_prompt">This tag is empty.</string>

    <!-- Instructions for a prompt on an empty tag -->
    <string name="empty_tag_instructions">Touch <b>Write tag</b> to add content.</string>

    <!-- Affirmative button label for writing to an empty tag -->
    <string name="write">Write tag</string>

    <!-- Negative button label for writing to an empty tag -->
    <string name="cancel">Cancel</string>

    <!-- Menu label for help screen -->
    <string name="menu_help">Help</string>

    <!-- Action description indicating the user can import a scanned vCard -->
    <string name="import_vcard">Import ^1</string>

    <!-- String describing MIME content when it's shared with other application -->
    <string name="mime_display_name">Data from NFC tag</string>

    <!-- Title of a dialog presented to the user when they launch the Tag app with the NFC hardware disabled. -->
    <string name="dialog_title_nfc_off">NFC turned off</string>

    <!-- Dialog text telling the user they must turn on the NFC hardware to be able to scan tags -->
    <string name="dialog_text_nfc_off">You must turn on NFC to scan tags.</string>

    <!-- Button that takes the user to the settings panel so they can enable the NFC hardware -->
    <string name="button_settings">Settings</string>

    <!-- Text shown in the list view when there are no tags present -->
    <string name="empty_list">You have not scanned any tags.</string>

    <!-- Text shown in the list of starred tags when there are no starred tags present -->
    <string name="empty_list_starred">You have no starred tags.</string>

    <!-- Button taking the user to more information about tags and how they work -->
    <string name="button_more_info">More info</string>

    <!-- URL for the help topic that provides more info on tags -->
    <string name="more_info_url" translatable="false">http://www.google.com/support/mobile/bin/topic.py?hl=%locale%&amp;topic=27236</string>

    <!-- Description string for vCard messages -->
    <string name="vcard_title">Contact info for ^1</string>

    <!-- Button label for going next in the introductory tutorial -->
    <string name="next">Next</string>

    <!-- Button label for going back in the introductory tutorial -->
    <string name="back">Back</string>

    <!-- Button label for going closing introductory tutorial -->
    <string name="close">Close</string>

    <!-- Title for the introductory dialog. -->
    <string name="intro_title">About Tags</string>

    <!-- Text blurb for describing the app in an introductory flow. [CHAR LIMIT=160] -->
    <string name="intro_text_about">Tags is for organizing and sharing Near Field Communication (NFC) tags.</string>

    <!-- Text blurb for describing usage of the app in an introductory flow. [CHAR LIMIT=120]-->
    <string name="intro_text_usage">You scan a tag by turning on your phone and placing it right next to a tag.</string>

    <!-- Text blurb for describing tag contents in an introductory flow. [CHAR LIMIT=240]-->
    <string name="intro_text_contents">NFC tags can contain text, URLs, pictures, and other kinds of information.</string>

    <!-- Text blurb for more information an introductory flow. [CHAR LIMIT=120]-->
    <string name="intro_text_more">To scan or share tags, you must have NFC turned on (in Settings, under Wireless &amp;
Networks).</string>

    <!-- Text blurb for more information an introductory flow. [CHAR LIMIT=120]-->
    <string name="intro_text_more2">For more information, press Menu and touch Help on any Tags screen.</string>

    <!-- Popup text for confirming the deletion of a tag -->
    <string name="tag_deleted">Tag deleted</string>

    <!-- Anchor text for touch target for creating a new My tag. [CHAR LIMIT=50] -->
    <string name="add_tag">Add new tag</string>

    <!-- Anchor text for touch target for selecting a tag to share as My tag. [CHAR LIMIT=50] -->
    <string name="choose_my_tag">Choose a tag to share</string>

    <!-- Active tag header for My tag [CHAR LIMIT=50] -->
    <string name="active_tag">Active tag</string>

    <!-- Header for list of tags that can be set as My tag. [CHAR LIMIT=50] -->
    <string name="manage_my_tags">Manage my tags</string>

    <!-- Menu item indicating that the user wants to delete a tag. [CHAR LIMIT=50] -->
    <string name="menu_delete">Delete tag</string>

    <!-- Menu item indicating that the user wants to edit a tag. [CHAR LIMIT=50] -->
    <string name="menu_edit">Edit tag</string>

    <!-- Menu item indicating that the user wants to set a tag
         as the active tag to share as the device's tag. [CHAR LIMIT=50] -->
    <string name="menu_set_as_active">Set as active tag</string>

    <!-- Error message displayed when attempting to enable sharing of a "My tag"
         with no tag selected. [CHAR LIMIT=80] -->
    <string name="no_tag_selected">You do not have a tag selected to share.</string>

    <!-- Error message displayed when attempting to select an active tag when
         none have been created. [CHAR LIMIT=80] -->
    <string name="no_tags_created">You have no tags created.</string>

</resources>
